--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -130,14 +130,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                            </a>
-                            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                            </ul>
-                        </li>*@
+                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+                        </a>
+                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+                        </ul>
+                    </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -166,11 +166,11 @@
                                         <li>
 
                                             @*<a href="#">
-                        <i class="fa fa-desktop"></i> <span> Manage Ranks & Crew</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>*@
+                    <i class="fa fa-desktop"></i> <span> Manage Ranks & Crew</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>*@
 
                                             <ul class="dropdown-menu">
                                                 @if (Convert.ToBoolean(Session["SuperAdmin"].ToString()))
@@ -285,14 +285,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                            </a>
-                            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                            </ul>
-                        </li>*@
+                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+                        </a>
+                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+                        </ul>
+                    </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -418,14 +418,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                            </a>
-                            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                            </ul>
-                        </li>*@
+                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+                        </a>
+                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+                        </ul>
+                    </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -446,14 +446,14 @@
                                         </li>
 
                                         @*<li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        On Board Facilities<i class="fa fa-angle-down" style="margin-left:20px;"></i>
-                    </a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="@Url.Action("Index", "Equipments")" style="border:none;">Equipments</a></li>
-                        <li><a href="@Url.Action("Index2", "Equipments")" style="border:none;">Medicine</a></li>
-                    </ul>
-                </li>*@
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                    On Board Facilities<i class="fa fa-angle-down" style="margin-left:20px;"></i>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="@Url.Action("Index", "Equipments")" style="border:none;">Equipments</a></li>
+                    <li><a href="@Url.Action("Index2", "Equipments")" style="border:none;">Medicine</a></li>
+                </ul>
+            </li>*@
 
                                         @*<li class=""><a href="@Url.Action("Index", "Home")"> <i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a></li>*@
                                         <li><a href="@Url.Action("Index", "Vessel")"> Vessel </a></li>
@@ -519,6 +519,8 @@
                                             <li><a href='@Url.Action("PatientDetails", "CrewHealth")'>Patient Details</a></li>
                                         </ul>
                                     </li>
+
+                                    <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
 
                                     <li class=""><a href='@Url.Action("Index", "About")'>About</a></li>
                                     <li class=""><a href='@Url.Action("index", "help")' style="border:none !important;">Help</a></li>
