--- a/TM.RestHour/Views/Groups/Index.cshtml
+++ b/TM.RestHour/Views/Groups/Index.cshtml
@@ -18,7 +18,7 @@
 <style>
     .button {
         position: relative;
-        background-color: #22BAA0;
+        background-color: #a278fe;
         border: none;
         font-size: 14px;
         color: #FFFFFF;
