--- a/TM.RestHour/Views/Login/Login.cshtml
+++ b/TM.RestHour/Views/Login/Login.cshtml
@@ -130,8 +130,8 @@
 
 		.btn-success {
 			color: #fff;
-			background-color: #22BAA0 !important;
-			border-color: #22BAA0 !important;
+			background-color: #a278fe !important;
+			border-color: #a278fe !important;
 		}
 
 		.m-t-md {
