--- a/TM.RestHour/Views/TimeSheet/Index.cshtml
+++ b/TM.RestHour/Views/TimeSheet/Index.cshtml
@@ -348,7 +348,7 @@
 									</a>
 								</td>
 								<td style="width:16%">
-									<a href="#" class="btn btn-primary a-btn-slide-text delbtn" style="background: #22baa0;border: #22baa0;border-radius: 70%;">
+									<a href="#" class="btn btn-primary a-btn-slide-text delbtn" style="background: #a278fe;border: #a278fe;border-radius: 70%;">
 										<span class="glyphicon glyphicon-trash"></span>
 										<span><strong></strong></span>
 									</a>
