--- a/TM.RestHour/css/login_page.css
+++ b/TM.RestHour/css/login_page.css
@@ -86,8 +86,8 @@ button, input, optgroup, select, textarea {
 
 .btn-success {
     color: #fff;
-    background-color: #22BAA0 !important;
-    border-color: #22BAA0 !important;
+    background-color: #a278fe !important;
+    border-color: #a278fe !important;
 }
 
 .m-t-md {
