--- a/TM.RestHour/Views/AddCrew/ServiceTerm.cshtml
+++ b/TM.RestHour/Views/AddCrew/ServiceTerm.cshtml
@@ -20,7 +20,7 @@
 <style>
     .button1 {
         position: relative;
-        background-color: #22BAA0;
+        background-color: #a278fe;
         border: none;
         font-size: 13px;
         color: #FFFFFF;
