--- a/TM.RestHour/Views/Department/Index.cshtml
+++ b/TM.RestHour/Views/Department/Index.cshtml
@@ -122,8 +122,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="buttonpop" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>
-                <button type="button" class="buttonpop" id="btnUpdate" style="display:none; width:86px;" onclick="Add();">Update</button>
+                <button type="button" class="button1" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>
+                <button type="button" class="button1" id="btnUpdate" style="display:none; width:86px;" onclick="Add();">Update</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
             </div>
         </div>
