--- a/TM.RestHour/Views/MentalHealth/Index.cshtml
+++ b/TM.RestHour/Views/MentalHealth/Index.cshtml
@@ -16,7 +16,7 @@
 <style>
     .button1 {
         position: relative;
-        background-color: #22BAA0;
+        background-color: #a278fe;
         border: none;
         font-size: 13px;
         color: #FFFFFF;
