--- a/TM.RestHour/Views/TimeSheet/CrewTimeSheet - Copy.cshtml
+++ b/TM.RestHour/Views/TimeSheet/CrewTimeSheet - Copy.cshtml
@@ -304,7 +304,7 @@
 <style>
 	.button {
 		position: relative;
-		background-color: #22BAA0;
+		background-color: #a278fe;
 		border: none;
 		font-size: 14px;
 		color: #FFFFFF;
