--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -66,23 +66,23 @@
                                         </div>
                                     </div>
                                     @*<div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="MailFrom">Mail From</label>
-                                            <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="MailId">Mail Id</label>
-                                            <input type="text" class="form-control" id="MailId" placeholder="MailId" />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="Password">Password</label>
-                                            <input type="password" class="form-control" id="Password" placeholder="Password" />
-                                        </div>
-                                    </div>*@
+            <div class="form-group">
+                <label for="MailFrom">Mail From</label>
+                <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="MailId">Mail Id</label>
+                <input type="text" class="form-control" id="MailId" placeholder="MailId" />
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="Password">Password</label>
+                <input type="password" class="form-control" id="Password" placeholder="Password" />
+            </div>
+        </div>*@
                                     @*///////////////////////////////////////////////////////////////////////////*@
                                     <div class="col-md-3">
                                         <div class="form-group">
@@ -102,19 +102,34 @@
                                             <input type="text" class="form-control" id="AdminCenterEmail" placeholder="Admin Center Email" />
                                         </div>
                                     </div>
+
+
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="POP3">IMAP / POP3 Server</label>
-                                            <input type="text" class="form-control" id="POP3" placeholder="IMAP / POP3" />
+                                            <label for="IMAPPOP">IMAP/POP</label>
+                                            @*<select id="IMAPPOP" class="form-control">
+                                                <option value="IMAP">IMAP</option>
+                                                <option value="POP">POP</option>
+                                            </select>*@
+                                            @*   http://localhost:1648/MailServerDetails   *@
+                                            <input type="text" class="form-control" id="IMAPPOP" placeholder="Ship Email" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="POP3 Port">Port</label>
-                                            <input type="text" class="form-control" id="POP3Port" placeholder="Port" />
+
+
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label for="POP3">IMAP / POP3 Server</label>
+                                                <input type="text" class="form-control" id="POP3" placeholder="IMAP / POP3" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label for="POP3 Port">Port</label>
+                                                <input type="text" class="form-control" id="POP3Port" placeholder="Port" />
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
 
 
