--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -130,14 +130,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -152,7 +152,7 @@
                                                         <li><a href="@Url.Action("Index", "Equipments")" style="border:none;">Medical Equipment</a></li>
                                                     </ul>
                                                 </li>
-
+                                                <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
 
                                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
@@ -285,14 +285,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -308,6 +308,7 @@
                                                     </ul>
                                                 </li>
 
+                                                <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                                             </ul>
 
@@ -418,14 +419,14 @@
                                                 </li>
 
                                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -441,6 +442,7 @@
                                                     </ul>
                                                 </li>
 
+                                                <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                                             </ul>
                                         </li>
@@ -520,7 +522,7 @@
                                         </ul>
                                     </li>
 
-                                    <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
+                                    @*<li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>*@
 
                                     <li class=""><a href='@Url.Action("Index", "About")'>About</a></li>
                                     <li class=""><a href='@Url.Action("index", "help")' style="border:none !important;">Help</a></li>
