--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -399,9 +399,9 @@
 
 
 
-                        <input type="checkbox" name="uploaddoc" id="UploadPistures" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="UploadPistures" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("UploadPistures", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadPistures();" id="btnUploadPistures">Upload</button>
+                        @*<button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadPistures();" id="btnUploadPistures">Upload</button>*@
                         </br>
                     </div>
                 </div>
