--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -107,12 +107,10 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="IMAPPOP">IMAP/POP</label>
-                                            @*<select id="IMAPPOP" class="form-control">
+                                            <select id="IMAPPOP" class="form-control">
                                                 <option value="IMAP">IMAP</option>
                                                 <option value="POP">POP</option>
-                                            </select>*@
-                                            @*   http://localhost:1648/MailServerDetails   *@
-                                            <input type="text" class="form-control" id="IMAPPOP" placeholder="Ship Email" />
+                                            </select>
                                         </div>
                                     </div>
 
