--- a/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
+++ b/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
@@ -165,7 +165,7 @@
                                         //$('#Username').val("");
                                         //$('#Password').val("");
                                         //ClearValues();
-                                        // alert('Data Saved Successfully');
+                                         alert('Data Saved Successfully');       
                                         if (response.result == 'Redirect') {
                                             toastr.options = {
                                                 "closeButton": false,
