--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -293,7 +293,7 @@
                         <div class="form-group">
                             <label for="Vomiting">Vomiting</label>
                             <select name="Vomiting" style="width: 100%;" class="form-control" id="Vomiting">
-                                <option value="">Select</option>
+                                <option value="-">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                             </select>
@@ -305,7 +305,7 @@
                         <div class="form-group">
                             <label for="Fits">Fits</label>
                             <select name="Fits" style="width: 100%;" class="form-control" id="Fits">
-                                <option value="">Select</option>
+                                <option value="-">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                             </select>
@@ -373,6 +373,7 @@
                         </div>
                     </div>
                     <div class="form-group">
+                       
                         <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1">
                         @*<button type="button" onclick="location.href='@Url.Action("UploadJoiningMedical", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadJoiningMedical();" id="btnUploadJoiningMedical">Upload Joining Medical</button>
@@ -453,7 +454,7 @@
                         <label for="Email">Email</label>
                         <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
                     </div>
-                    <button type="button" class="button1" id="" onclick="">Send</button>
+                    <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
                 </div>
              
 
@@ -480,6 +481,7 @@
                 <div class="modal-dialog" style="width:890px;">
                     <div class="modal-content">
                         <div class="modal-header">
+                            
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4 class="modal-title" id="myModalLabel">Photo Upload</h4>
                         </div>
@@ -493,22 +495,23 @@
                                         <div class="form-horizontal">
                                             <label class="col-xs-5 control-label">Photo:</label>
                                             @*<div>
-                                                    @using (Html.BeginForm("MedicalTreatment", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                                                    {
-                                                        <span>Select File:</span>
-                                                        <input type="file" name="postedFile" />
-                                                        <hr />
-                                                        <input type="submit" value="Upload" />
-                                                        <br />
-                                                        <span style="color:green">@ViewBag.Message</span>
-                                                    }
-                                                </div>*@
+                    @using (Html.BeginForm("MedicalTreatment", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <span>Select File:</span>
+                        <input type="file" name="postedFile" />
+                        <hr />
+                        <input type="submit" value="Upload" />
+                        <br />
+                        <span style="color:green">@ViewBag.Message</span>
+                    }
+                </div>*@
                                         </div>
                                     </div>
 
                                     @*////////////////////////////////Dheeman da///////////////////////////////////////////////////////*@
-                                    <input id="upload" name="upload" type="file" />
-                                    <button type="button" class="buttonpop" onclick="  uploadFile($('#upload'));" style="width:86px;">Upload</button>
+                                    <input id="uploadCrewHealthImage" name="upload" type="file" />
+                                    @*<button type="button" class="buttonpop" onclick="  uploadFile($('#upload'));" style="width:86px;">Upload</button>*@
+                                    <button type="button" class="buttonpop" onclick="  UploadFiles();" style="width:86px;">Upload</button>
 
 
                                     <div class="col-sm-3" style="width: 63%;"></div>
@@ -518,6 +521,7 @@
 
                                     <div class="form-group">
                                         <input type="hidden" id="PhotoUploadID" class="form-control" />
+                                        <input type="hidden" id="hdnCrewHealthImagePath" value="" />
                                     </div>
 
                                 </div>
@@ -525,7 +529,8 @@
                         </div>
 
                         <div class="modal-footer">
-                            <button type="button" class="buttonpop" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>
+                            <label class="hidden" id="lblSuccMsg" ></label>
+                            @*<button type="button" class="buttonpop" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>*@
                             @*<button type="button" class="buttonpop" id="btnUpdate" style="display:none; width:86px;" onclick="Add();">Update</button>*@
                             <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
                         </div>
