--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -218,7 +218,7 @@
                                                     <li class="dropdown">
                                                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Settings <i class="fa fa-angle-right" style="margin-left:90px;"></i>@*<span class="caret"></span>*@</a>
                                                         <ul class="dropdown-menu" role="menu" style="left: 226px;top: -3px;">
-                                                            <li><a href="@Url.Action("IndexIn", "MailServerDetails")" style="border:none;">Mail Server</a></li>
+                                                            @*<li><a href="@Url.Action("IndexIn", "MailServerDetails")" style="border:none;">Mail Server</a></li>*@
                                                             <li><a href='@Url.Action("ResetPassword", "Login")'>Reset Password</a></li>
                                                         </ul>
                                                     </li>
