--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -374,27 +374,27 @@
                     </div>
                     <div class="form-group">
                        
-                        <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("UploadJoiningMedical", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadJoiningMedical();" id="btnUploadJoiningMedical">Upload Joining Medical</button>
 
-                        <input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("MedicineAvailableOnBoard", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicineAvailableOnBoard();" id="btnMedicineAvailableOnBoard">Upload Medicine Available On Board</button>
 
-                        <input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("MedicalEquipmentOnBoard", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicalEquipmentOnBoard();" id="btnMedicalEquipmentOnBoard">Upload Medical Equipment On Board</button>
 
-                        <input type="checkbox" name="uploaddoc" id="MedicalHistoryUpload" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="MedicalHistoryUpload" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("MedicalHistoryUpload", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicalHistoryUpload();" id="btnMedicalHistoryUpload">Upload Medical History Upload</button>
 
-                        <input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("WorkAndRestHourLatestRecord", "CrewHealth")';return false;">Upload</button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return WorkAndRestHourLatestRecord();" id="btnWorkAndRestHourLatestRecord">Upload Work And Rest Hour Latest Record</button>
 
-                        <input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">
+                        @*<input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">*@
                         @*<button type="button" onclick="location.href='@Url.Action("PreExistingMedicationPrescription", "CrewHealth")';return false;">Upload </button>*@
                         <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return PreExistingMedicationPrescription();" id="btnPreExistingMedicationPrescription">Upload Pre Existing Medication Prescription</button>
 
