Worth_SQL_Script_Initial_17.03.2021_II

--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -123,7 +123,7 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="POP3 Port">Port</label>
+                                                <label for="POP3 Port">IMAP / POP3 Port</label>
                                                 <input type="text" class="form-control" id="POP3Port" placeholder="Port" />
                                             </div>
                                         </div>
