--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -575,8 +575,8 @@
                                     </span>
                                 </P>
                                 <i class="fa fa-sign-out" aria-hidden="true"></i>
-                                <p>Page is representing which section</p>
-                                <p>Stress management etc </p>
+                                @*<p>Page is representing which section</p>
+                                <p>Stress management etc </p>*@
                             </div>
                             
 
