--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -574,9 +574,9 @@
                                         @System.Web.HttpContext.Current.Session["FirstName"].ToString()   @System.Web.HttpContext.Current.Session["LastName"]
                                     </span>
                                 </P>
-                                <i class="fa fa-sign-out" aria-hidden="true"></i>
-                                <p>Page is representing which section</p>
-                                <p>Stress management etc </p>
+                                @*<i class="fa fa-sign-out" aria-hidden="true"></i>*@
+                                @*<p>Page is representing which section</p>
+                                <p>Stress management etc </p>*@
                             </div>
                             
 
