--- a/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
@@ -70,23 +70,23 @@
                                         </div>
                                     </div>
                                     @*<div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="MailFrom">Mail From</label>
-                                            <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="MailId">Mail Id</label>
-                                            <input type="text" class="form-control" id="MailId" placeholder="MailId" />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="Password">Password</label>
-                                            <input type="password" class="form-control" id="Password" placeholder="Password" />
-                                        </div>
-                                    </div>*@
+            <div class="form-group">
+                <label for="MailFrom">Mail From</label>
+                <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="MailId">Mail Id</label>
+                <input type="text" class="form-control" id="MailId" placeholder="MailId" />
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="Password">Password</label>
+                <input type="password" class="form-control" id="Password" placeholder="Password" />
+            </div>
+        </div>*@
 
                                     @*///////////////////////////////////////////////////////////////////////////*@
                                     <div class="col-md-3">
@@ -98,8 +98,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="Ship Email Password">Ship Email Password</label>
-                                            @*<input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />*@
-                                            <input type="password" class="form-control" id="Password" placeholder="Ship Email Password" />
+                                            <input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -110,14 +109,23 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="POP3">POP3</label>
-                                            <input type="text" class="form-control" id="POP3" placeholder="POP3" />
+                                            <label for="IMAPPOP">IMAP/POP</label>
+                                            <select id="IMAPPOP" class="form-control">
+                                                <option value="IMAP">IMAP</option>
+                                                <option value="POP">POP</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="POP3 Port">POP3 Port</label>
-                                            <input type="text" class="form-control" id="POP3Port" placeholder="POP3 Port" />
+                                            <label for="POP3">IMAP / POP3 Server</label>
+                                            <input type="text" class="form-control" id="POP3" placeholder="IMAP / POP3" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="POP3 Port">IMAP / POP3 Port</label>
+                                            <input type="text" class="form-control" id="POP3Port" placeholder="Port" />
                                         </div>
                                     </div>
                                 </div>
