--- a/TM.RestHour/Views/Login/Index.cshtml
+++ b/TM.RestHour/Views/Login/Index.cshtml
@@ -88,7 +88,7 @@
                                         <h3>Sign In</h3>
                                     </div>
                                     <div class="form-group">
-                                        <label>Email</label>
+                                        <label>User</label>
                                         @Html.TextBoxFor(a => a.Users.Username)
                                         @Html.ValidationMessageFor(a => a.Users.Username)
                                     </div>
