--- a/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
+++ b/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
@@ -565,6 +565,12 @@
     </script>
     <script type="text/javascript">
 
+        $(document).ready(function () {
+
+            alert('Your sign-off date is near. If you want to change please contact your administrator.'); // new deep
+        });
+      
+
 
 		var count = 1;
 		var rowcounter = 2;
