--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -535,7 +535,7 @@
                                     <div class="dropdown-content">
                                         @*<h3>Admin</h3>*@
                                         <h3>@System.Web.HttpContext.Current.Session["LoggedInUserType"].ToString()</h3>
-                                        <a onclick="location.href='@Url.Action("Index", "Login")';return false;">Sing Out</a>
+                                        <a onclick="location.href='@Url.Action("Index", "Login")';return false;">Sign Out</a>
                                     </div>
                                 </div>
 
