--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -154,6 +154,16 @@
                                                 </li>
                                                 <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
 
+                                                <li class="dropdown">
+                                                    <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                                        Psychological Evaluation<i class="fa fa-angle-right"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu" role="menu" style="left: 226px;top: -3px;">
+                                                        <li><a href="@Url.Action("LocusOfControl", "PsychologicalEvaluation")" style="border:none;">Locus Of Control </a></li>
+                                                        <li><a href="@Url.Action("LocusOfControl", "PsychologicalEvaluation")" style="border:none;">Locus Of Control </a></li>
+                                                    </ul>
+                                                </li>
+
                                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                                             </ul>
